--- a/stylesheets/go-oracle.less
+++ b/stylesheets/go-oracle.less
@@ -3,6 +3,8 @@
 // See https://github.com/atom/atom-dark-ui/blob/master/stylesheets/ui-variables.less
 // for a full listing of what's available.
 @import "ui-variables";
+@import "octicon-mixins";
 
 .go-oracle {
+  .loading { .octicon(sync); }
 }
