--- a/stylesheets/go-oracle.less
+++ b/stylesheets/go-oracle.less
@@ -6,5 +6,17 @@
 @import "octicon-mixins";
 
 .go-oracle {
-  .loading { .octicon(sync); }
+  .loading {
+    .octicon(sync);
+  }
+
+  .oracle-data {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .oracle-data li {
+    .octicon(arrow-right)
+  }
 }
