--- a/stylesheets/go-oracle.less
+++ b/stylesheets/go-oracle.less
@@ -6,14 +6,14 @@
 @import "octicon-mixins";
 
 .go-oracle {
-  .loading {
-    .octicon(sync);
-  }
-
   .oracle-data {
     list-style-type: none;
     padding: 0;
     margin: 0;
+  }
+
+  .title {
+    .octicon(eye)
   }
 
   .oracle-data li {
